src/test/ui/generics/generic-extern.stderr
error[E0044]: foreign items may not have type parameters
  --> $DIR/generic-extern.rs:2:5
   |
LL |     fn foo<T>();
   |     ^^^^^^^^^^^^ can't have type parameters
   |
   = help: replace the type parameters with concrete types like `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0044`.
